@@ -1,6 +1,8 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.003001
+ [Added / runtime requires]
+ - Devel::CheckBin
 
 1.003000 2014-09-03T22:13:41Z
  [Added / runtime requires]
