@@ -1,6 +1,11 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Bugfix]
+ - Don't call unname on devices where there is no uname.
+
+ [Dependencies::Stats]
+ - runtime: +1
 
 1.003000 2014-09-03T22:13:41Z
  [00 Minor]
